fix contraste

--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 40px;
 }
 
 .navbar {
@@ -704,6 +704,10 @@ p {
     margin: auto auto auto auto;
 }
 
+.social p {
+    display: none;
+}
+
 h2 {
     font-size: 22px;
     line-height: 1.4em;
@@ -781,12 +785,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3A884;
+    color: #CA8258;
     font-weight: bold;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #CA8258;
     color: #FFFFFF!important;
 }
 
